--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.6.7",
     "discord.js": "^14.20.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "firebase-admin": "^11.11.1",
     "node-fetch": "^2.7.0",
-    "openai": "^5.10.2"
+    "openai": "^5.10.2",
+    "discord.js-selfbot-v13": "^3.7.0"
   }
 }
