--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "axios": "^1.6.7",
     "discord.js": "^14.20.0",
+    "discord.js-selfbot-v13": "^3.7.0",
     "express": "^4.18.2",
     "firebase-admin": "^11.11.1",
     "node-fetch": "^2.7.0",
-    "openai": "^5.10.2",
-    "discord.js-selfbot-v13": "^3.7.0"
+    "node-schedule": "^2.1.1",
+    "openai": "^5.10.2"
   }
 }
